[package]
name = "melinoe"
version = "0.7.0"
edition = "2021"
rust-version = "1.65"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
description = "Zero-sized, branded, multi-token phantom capabilities for compile-time data-access and thread-synchronization proofs (a generalized evolution of GhostCell) for the Mnemosyne memory ecosystem."
documentation = "https://docs.rs/melinoe"
repository = "https://github.com/ryancinsight/melinoe"
license = "MIT OR Apache-2.0"
keywords = ["ghostcell", "phantom", "capability", "no_std", "concurrency"]
categories = ["no-std", "concurrency", "rust-patterns", "memory-management"]
readme = "README.md"

[features]
default = ["std", "parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = ["alloc"]
# `alloc` pulls in the `alloc` crate so branded cells over heap-owning payloads
# (`Box`, `Vec`, ...) can be exercised in examples/tests without `std`.
alloc = []
# `std` is a superset of `alloc`; it additionally enables the `std`-gated
# cross-thread handoff demonstrations that rely on `std::thread::scope`.
std = ["alloc"]
# `nightly` enables `doc_cfg` for precise feature-gated documentation (requires
# a nightly toolchain) and reserves the surface for future
# `generic_const_exprs`-based capability sets.
nightly = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# The codegen probe exercises the alloc-gated `CellCowExt::borrow_cow` boundary,
# so it only compiles with `alloc`. Gating it keeps `--no-default-features`
# (which excludes `alloc`) building cleanly across all targets.
[[example]]
name = "codegen"
required-features = ["alloc"]

[[bench]]
name = "access"
harness = false
required-features = ["std"]

[[bench]]
name = "mnemosyne"
harness = false
required-features = ["std"]

[[bench]]
name = "concurrent_reads"
harness = false
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "warn"

[[bench]]
name = "false_sharing"
harness = false
required-features = ["std"]

[[bench]]
name = "conditional_atomics"
harness = false
required-features = ["std"]
